--- a/public/index.html
+++ b/public/index.html
@@ -18,23 +18,27 @@
         <input id="passwordInput" class="form-control" type="password" placeholder="Enter Password" name="psw" required>
         <label for="psw"><b>Nick</b></label>
         <input id="nickInput" class="form-control" type="text" placeholder="Enter Nick" name="nick" required>
-
-        <button id="loginBtn" type="submit" class="btn btn-outline-primary my-2">Login</button>
-        <button id="signupBtn" type="submit" class="btn btn-outline-primary my-2">Signup</button>
-        <button id="logoutBtn" type="submit" class="btn btn-outline-primary my-2">Logout</button>
+        <div class="login-page-btns d-flex justify-content-center">
+          <button id="loginBtn" type="submit" class="btn btn-outline-primary m-2">Login</button>
+          <button id="signupBtn" type="submit" class="btn btn-outline-primary m-2">Signup</button>
+          <button id="logoutBtn" type="submit" class="btn btn-outline-primary m-2">Logout</button>
+        </div>
+        
     </form>
     <div id="create_el" class="d-flex flex-column justify-content-center px-2"></div>
     <div class="container-fluid">
       <div class="row" id="container">
       </div>
     </div>
-    <div class="footer d-flex justify-content-center">
-      <div class="users-box d-flex flex-column"></div>
+    <div class="footer d-flex flex-column justify-content-center overflow-visible">
+      <div class="users-box d-flex flex-column align-self-center w-50"></div>
+      <ul id="events"></ul>
     </div>
   </div>
   <script type="module" src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+  <script src="/socket.io/socket.io.js"></script>
   <script type="module" src="index.js" defer></script>
 </body>
 
